# Friends-database-management

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py  vercel.json
templates/: all_records.html  index.html  result.html
